# RCM_on_meshes

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp  app.h  editing.h  main.cpp
libs/: CMakeLists.txt
libs/VTP/: geodesic_algorithm_exact.h  geodesic_constants_and_simple_functions.h  geodesic_mesh.h
libs/diff_geo/: CMakeLists.txt  diff_geo.cpp  diff_geo.h
libs/nanosvg/src/: nanosvg.h
libs/realtime/: cmake_install.cmake  gpu.cpp  gpu.h
libs/realtime/ext/graphics/graphics/: geometry.h
libs/realtime/glfw/: cmake_install.cmake
libs/realtime/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
libs/realtime/glfw/GLFW.xcodeproj/: project.pbxproj
libs/realtime/glfw/src/: cmake_install.cmake  glfw3ConfigVersion.cmake
libs/realtime/glfw/src/splinesurf.build/Debug/glfw.build/: dgph  dgph~
libs/realtime/glfw/src/splinesurf.build/Debug/glfw.build/Objects-normal/x86_64/: glfw3.LinkFileList
libs/realtime/glfw/src/splinesurf.build/Release/glfw.build/: dgph  dgph~
libs/realtime/glfw/src/splinesurf.build/Release/glfw.build/Objects-normal/x86_64/: cocoa_window.dia  glfw3.LinkFileList
libs/utils/: CMakeLists.txt  drawing_circle.cpp  drawing_circle.h  mesh_io.cpp  mesh_io.h  utilities.cpp  utilities.h
libs/yocto/: cmake_install.cmake  yocto_mesh.cpp  yocto_mesh.h  yocto_modelio.cpp  yocto_modelio.h  yocto_shape.cpp  yocto_shape.h
libs/yocto/splinesurf.build/Debug/yocto.build/: dgph
libs/yocto/splinesurf.build/Debug/yocto.build/Objects-normal/x86_64/: yocto.LinkFileList
libs/yocto/splinesurf.build/Release/yocto.build/: dgph
libs/yocto/splinesurf.build/Release/yocto.build/Objects-normal/x86_64/: yocto.LinkFileList
libs/yocto_gui/: yocto_imgui.cpp  yocto_imgui.h
scripts/: xcode.py
